--- a/index.html
+++ b/index.html
@@ -152,11 +152,13 @@ footer {
   mask: url(images/SuccessBlessIconAndString.svg) no-repeat center / contain;
   background-color: #fff;
   mix-blend-mode: difference;
-  width: 80%;
+  width: 100%;
+  height: 100%;
   max-width: 600px;
-  height: 0;
-  padding-bottom: 30%;
+  max-height: 300px; /* SVGのアスペクト比に応じて調整 */
   margin: 0 auto 30px;
+  object-fit: contain;
+  display: block;
 }
 
 .hero-content {
