--- a/index.html
+++ b/index.html
@@ -15,209 +15,143 @@
   <meta property="og:image" content="https://dokuturutake.github.io/SuccessBless/images/og-image.jpg">
   <meta name="twitter:card" content="summary_large_image">
   <style>
- body {
-  margin: 0;
-  font-family: sans-serif;
-  background-color: black;
-  color: white;
-  overflow-x: hidden;
-}
+    body {
+      margin: 0;
+      font-family: sans-serif;
+      background-color: black;
+      color: white;
+      overflow-x: hidden;
+    }
 
-.header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 1;
-  padding: 20px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  opacity: 1;
-  transition: opacity 0.5s ease;
-  mix-blend-mode: difference;
-}
+    .header {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      z-index: 1;
+      padding: 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      mix-blend-mode: difference;
+    }
 
-.header.hidden {
-  opacity: 0;
-}
+    .nav ul {
+      display: flex;
+      list-style: none;
+      gap: 20px;
+    }
 
-.nav ul {
-  display: flex;
-  list-style: none;
-  gap: 20px;
-}
+    .nav a {
+      color: white;
+      text-decoration: none;
+    }
 
-.nav a {
-  color: white;
-  text-decoration: none;
-}
+    .section {
+      min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 50px 20px;
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+    }
 
-.nav a:hover {
-  color: gray;
-}
+    #hero {
+      background-image: url('images/ai-feedback.gif');
+    }
 
-.hero-section, .section {
-  min-height: 110vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 50px 20px;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-}
+    #why, #how {
+      background-image: url('images/why-image.gif');
+    }
 
-.hero-section {
-  height: 105vh;
-  text-align: center;
-  background-image: url('images/ai-feedback.gif');
-}
+    #what {
+      background-image: url('images/ai-feedback.gif');
+    }
 
-#why, #how {
-  background-image: url('images/why-image.gif');
-}
+    .section h2, 
+    .section p {
+      color: white;
+      mix-blend-mode: difference;
+    }
 
-#what {
-  background-image: url('images/ai-feedback.gif');
-}
+    .section h2 {
+      font-size: 3rem;
+    }
 
-.hero-section h2, 
-.hero-section p, 
-.section h2, 
-.section p {
-  color: white;
-  mix-blend-mode: difference;
-}
+    .section p {
+      font-size: 1.2rem;
+      line-height: 1.8;
+    }
 
-.hero-section h2 {
-  font-size: 5rem;
-}
+    .button {
+      background-color: white;
+      color: black;
+      padding: 15px 30px;
+      border-radius: 30px;
+      font-size: 1.2rem;
+      font-weight: bold;
+      cursor: pointer;
+      transition: background-color 0.3s;
+      text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.7);
+    }
 
-.hero-section p {
-  font-size: 1.5rem;
-}
+    .button:hover {
+      background-color: gray;
+    }
 
-.section h2 {
-  font-size: 3rem;
-}
+    footer {
+      background-color: #333;
+      text-align: center;
+      padding: 30px 0;
+    }
 
-.section p {
-  font-size: 1.2rem;
-  line-height: 1.8;
-}
+    .svg-icon {
+      -webkit-mask: url(images/SuccessBlessIconAndString.svg) no-repeat center / contain;
+      mask: url(images/SuccessBlessIconAndString.svg) no-repeat center / contain;
+      background-color: #fff;
+      mix-blend-mode: difference;
+      width: 80svw;
+      height: auto;
+      aspect-ratio: 15/6;
+      margin: 0 auto;
+      object-fit: contain;
+      display: block;
+    }
 
-.button {
-  background-color: white;
-  color: black;
-  padding: 15px 30px;
-  border-radius: 30px;
-  font-size: 1.2rem;
-  font-weight: bold;
-  cursor: pointer;
-  transition: background-color 0.3s;
-  text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.7);
-}
+    @media (max-width: 768px) {
+      .section h2 {
+        font-size: 2rem;
+      }
 
-.button:hover {
-  background-color: gray;
-}
+      .section p {
+        font-size: 1rem;
+      }
 
-.fade-in-left, .fade-in-right {
-  opacity: 0;
-  transition: opacity 0.8s, transform 0.8s;
-}
+      .button {
+        padding: 10px 20px;
+        font-size: 1rem;
+      }
 
-.fade-in-left {
-  transform: translateX(-100px);
-}
+      .svg-icon {
+        padding-bottom: 35%;
+      }
+    }
 
-.fade-in-right {
-  transform: translateX(100px);
-}
+    @media (max-width: 480px) {
+      .svg-icon {
+        padding-bottom: 40%;
+      }
+    }
 
-.fade-in-left.visible, .fade-in-right.visible {
-  opacity: 1;
-  transform: translateX(0);
-}
-
-footer {
-  background-color: #333;
-  text-align: center;
-  padding: 30px 0;
-}
-
-.svg-icon {
-  -webkit-mask: url(images/SuccessBlessIconAndString.svg) no-repeat center / contain;
-  mask: url(images/SuccessBlessIconAndString.svg) no-repeat center / contain;
-  background-color: #fff;
-  mix-blend-mode: difference;
-  width: 100%;
-  height: 100%;
-  max-width: 600px;
-  max-height: 300px; /* SVGのアスペクト比に応じて調整 */
-  margin: 0 auto 30px;
-  object-fit: contain;
-  display: block;
-}
-
-.hero-content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-  padding: 20px;
-  width: 100%;
-  box-sizing: border-box;
-}
-
-@media (max-width: 768px) {
-  .hero-section h2 {
-    font-size: 3rem;
-  }
-
-  .hero-section p, .section p {
-    font-size: 1rem;
-  }
-
-  .section h2 {
-    font-size: 2rem;
-  }
-
-  .button {
-    padding: 10px 20px;
-    font-size: 1rem;
-  }
-
-  .hero-section, .section {
-    background-size: auto 100%;
-    background-position: center center;
-  }
-
-  .svg-icon {
-    width: 90%;
-    padding-bottom: 35%;
-  }
-}
-
-@media (max-width: 480px) {
-  .hero-section h2 {
-    font-size: 2rem;
-  }
-
-  .svg-icon {
-    width: 95%;
-    padding-bottom: 40%;
-  }
-}
   </style>
 </head>
 <body>
   <header class="header" id="header">
-    <h1 class="logo"> </h1>
     <nav class="nav">
       <ul>
+        <li><a href="#hero">Home</a></li>
         <li><a href="#why">Why</a></li>
         <li><a href="#what">What</a></li>
         <li><a href="#how">How</a></li>
@@ -226,9 +160,8 @@ footer {
   </header>
 
   <main>
-    <!-- Hero Section -->
-    <section class="hero-section">
-      <div class="hero-content" id="hero-content">
+    <section class="section" id="hero">
+      <div>
         <div class="svg-icon"></div>
         <p>AIがあなたを応援する目標達成サポートSNS</p>
         <a href="https://dokuturutake.github.io/SuccessBless/">
@@ -237,9 +170,8 @@ footer {
       </div>
     </section>
 
-    <!-- Why Section -->
     <section class="section" id="why">
-      <div class="" id="why-content">
+      <div>
         <h2>Why SUCCESSBLESS?</h2>
         <p>
           SUCCESSBLESSは、SNSの楽しいインタラクションとAIのフィードバックを組み合わせて、あなたの目標達成をサポートします。SNSの中毒性を活かしながら、楽しみつつ成長できます。
@@ -247,9 +179,8 @@ footer {
       </div>
     </section>
 
-    <!-- What Section -->
     <section class="section" id="what">
-      <div class="" id="what-content">
+      <div>
         <h2>What We Offer</h2>
         <p>
           SUCCESSBLESSでは、投稿に対してAIがフィードバックを提供し、モチベーションを維持できます。また、他のユーザーとのインタラクションを楽しみながら、日々の目標をゲーム感覚で進めることができます。
@@ -257,9 +188,8 @@ footer {
       </div>
     </section>
 
-    <!-- How Section -->
     <section class="section" id="how">
-      <div class="" id="how-content">
+      <div>
         <h2>How It Works</h2>
         <p>
           シンプルで直感的な操作感のWebアプリ。広告もなく、無料で利用でき、日々の目標達成をサポートします。
@@ -269,89 +199,92 @@ footer {
   </main>
 
   <footer>
-    <section class="section">
-        <p>&copy; 2024 SUCCESSBLESS. All rights reserved.</p>
-          <p>
-      <a href="https://github.com/dokuturutake/SuccessBless" target="_blank" rel="noopener noreferrer">
-        GitHub Repository
-      </a>
-    </p>
+    <section>
+      <p>&copy; 2024 SUCCESSBLESS. All rights reserved.</p>
+      <p>
+        <a href="https://github.com/dokuturutake/SuccessBless" target="_blank" rel="noopener noreferrer">
+          GitHub Repository
+        </a>
+      </p>
     </section>
   </footer>
 
   <script>
-    // Intersection Observer for section fade-in effects
-    const sections = document.querySelectorAll('.fade-in-left, .fade-in-right');
-    const observer = new IntersectionObserver((entries) => {
-      entries.forEach(entry => {
-        if (entry.isIntersecting) {
-          entry.target.classList.add('visible');
-        }
-      });
-    }, { threshold: 0.1 });
+    const sections = document.querySelectorAll('.section');
+    let isScrolling = false;
+    let currentSection = 0;
 
-    sections.forEach(section => observer.observe(section));
-
-    // Header fade on scroll
-    const header = document.getElementById('header');
-    window.addEventListener('scroll', () => {
-      if (window.scrollY > 100) {
-        header.classList.add('hidden');
-      } else {
-        header.classList.remove('hidden');
-      }
-    });
-
-    // セクションのリンクがクリックされたときに、中央にスクロールさせる
-    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-    anchor.addEventListener('click', function(e) {
-        e.preventDefault();
-
-        const targetId = this.getAttribute('href');
-        document.querySelector(targetId).scrollIntoView({
+    function smoothScrollTo(element) {
+      element.scrollIntoView({
         behavior: 'smooth',
-        block: 'center'  // セクションが画面の中央に来るように
-        });
-    });
-    });
-
-    // セクション要素を取得
-
-// スクロール時に最も近いセクションを中央に移動
-let isScrolling = false;
-
-window.addEventListener('scroll', () => {
-  if (!isScrolling) {
-    window.requestAnimationFrame(() => {
-      let closestSection = null;
-      let closestDistance = Infinity;
-
-      sections.forEach(section => {
-        const rect = section.getBoundingClientRect();
-        const distance = Math.abs(rect.top - window.innerHeight / 2);
-
-        if (distance < closestDistance) {
-          closestDistance = distance;
-          closestSection = section;
-        }
+        block: 'center'
       });
+    }
 
-      // 最も近いセクションを中央にスクロール
-      if (closestSection) {
-        closestSection.scrollIntoView({
-          behavior: 'smooth',
-          block: 'center'
+    function debounce(func, wait = 20, immediate = true) {
+      let timeout;
+      return function() {
+        const context = this, args = arguments;
+        const later = function() {
+          timeout = null;
+          if (!immediate) func.apply(context, args);
+        };
+        const callNow = immediate && !timeout;
+        clearTimeout(timeout);
+        timeout = setTimeout(later, wait);
+        if (callNow) func.apply(context, args);
+      };
+    }
+
+    function checkSlide() {
+      if (!isScrolling) {
+        const scrollPosition = window.scrollY + window.innerHeight / 2;
+        let closestSection = 0;
+        let closestDistance = Infinity;
+
+        sections.forEach((section, index) => {
+          const sectionMiddle = section.offsetTop + section.offsetHeight / 2;
+          const distance = Math.abs(scrollPosition - sectionMiddle);
+
+          if (distance < closestDistance) {
+            closestDistance = distance;
+            closestSection = index;
+          }
         });
+
+        if (closestSection !== currentSection) {
+          currentSection = closestSection;
+          smoothScrollTo(sections[currentSection]);
+        }
       }
+    }
 
-      isScrolling = false;
+    window.addEventListener('scroll', debounce(checkSlide));
+
+    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+      anchor.addEventListener('click', function(e) {
+        e.preventDefault();
+        const targetId = this.getAttribute('href');
+        const targetSection = document.querySelector(targetId);
+        smoothScrollTo(targetSection);
+      });
     });
-    isScrolling = true;
-  }
-});
 
-
+    window.addEventListener('wheel', (e) => {
+      e.preventDefault();
+      if (!isScrolling) {
+        isScrolling = true;
+        if (e.deltaY > 0 && currentSection < sections.length - 1) {
+          currentSection++;
+        } else if (e.deltaY < 0 && currentSection > 0) {
+          currentSection--;
+        }
+        smoothScrollTo(sections[currentSection]);
+        setTimeout(() => {
+          isScrolling = false;
+        }, 1000);
+      }
+    }, { passive: false });
   </script>
 </body>
 </html>
-
